Chapter 4 more or less done

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -53,7 +53,6 @@ To conclude, SUHI analysis can be a good indicator that there is a UHI phenomeno
 The canopy UHI is measured in the canopy boundary layer several meters above ground slightly below or on the average roof layer of the surrounding buildings, as seen in fig.~\ref{fig:microscale boundary layer}. The primary measurement in the canopy is air temperature, which is used to measure the urban heat island intensity (UHII)~\cite{oke1973city}, the most commonly used way of describing the heat island maginitude~\cite{kim2021urban}.\\
 Since the beginning of modern climatology, mayor progress has been made in this research field, but methodologies and scientific rigor in CUHI research still seems to be lacking, as discussed by Stewart in 2011~\cite{stewart2011systematic}. Stewart found, that over 54\% of CUHI research was lacking proper methodologies or had other shortcommings such as a lack of site desciptions, where sensors were placed, or the disregard of non-urban factors such as local weather phenomena. In response, progress has been made in recent years by improving methodologies and ensuring correct measurements of climate-related data and study design and execution through various guidelines~\cite{oke2006guideline}, especially in urban settings, that require special care due to the huge amount of possible influences on local recording sites.\\
 Additionally, the UHII is highly related to other climatic factors such as wind, cloud cover, and precipitation and is tightly linked to the selection of the recording site~\cite{fenner2019contrasting}, therefore such factors need to be taken into account when measuring the UHII.\\
-% TODO: how and where is it measured
 Compared to LST, TA is measured in situ via weather station networks or other types of sensor networks. Provider for PWS and temperatur sensor networks are further discussed in Section~\ref{sec: private weather station network providers}.
 
 \subsubsection{Shared UHI Challenges}
@@ -75,15 +74,13 @@ In connection to this work, ML-based interpolation, for example for air temperat
 
 \subsection{Sensing Layer}
 
-% todo: take a closer look at sensing layer with challenges like sensor placement, uncertainty etc.
-
 The goal for the sensing layer is to monitor the surrounding environment and capture key data for further analysis and decision making. It consists of many different types of physical and virtual sensors. The first group of sensors are the physical sensors, which are placed directly inside the environment. Wireless sensor networks (WSN)~\cite{dargie2010fundamentals} have seen a lot of attention for many different applications such as `military sensing, physical security, air traffic control, traffic surveillance, video surveillance, industrial and manufacturing automation, distributed robotics, environment monitoring, and building and structures monitoring'~\cite{chong2003sensor}. The challenges for WSNs primarily depend among other things on the deployment. An ad-hoc WSN has energy and bandwidth contraints due to the usage of batteries as power sources.
 In contrast, sensors that are permanetly installed, either stationary or on a moving target, and connected to a constant power source don't have this constraints. This approach could be used for smart cities to reduce waste and guarantee representative measurements via correct sensor placement. In the case of stationary sensor networks though, the initial deployment and following maintenance cost can be substantial, as seen by the Birgmingham Testbed~\cite{chapman2015birmingham}. If the cost is however distributed across many by following a crowd-sourcing approach, e.g.\ crowd-sensing via PWS, larger networks could be maintained, but there are also new challenges introduced by running a sensor networks by non-professionals~\cite{meier2017crowdsourcing}.\\
 In recent years, low-cost sensors (LCS) in combination with sensor networks have enabled fine-granular real-time monitoring of urban environments~\cite{grimmond2006progress, rundel2009environmental}, although the quality of individual low-cost sensors can be questionable~\cite{castell2017can}. Especially PWS data has been used to augment weather data from traditional weather monitoring networks from offical weather services~\cite{hahn2022observations}. In general, LCSs can improve data availibility and support analysis, but do not substitute well-calibrated reference instrumentation~\cite{lewis2018low}.
 
 \subsubsection{Stationary Sensors}
 
-There are many different types of environmental features that can be measured directly inside an urban area. The types of measurements that can be observed are among others: air temperature, humidity, atmospheric pressure, reactive gaseous air pollutant (CO, NOx, O$_3$, SO$_2$), particulate matter (PM), greenhouse gases (CO$_2$, CH$_4$), percipitation, solar radiation, wind speed and direction, anthropogenic heat, noise, sky-view factor, heat fluxes and many more. % Todo: Soil
+There are many different types of environmental features that can be measured directly inside an urban area. The types of measurements that can be observed are among others: air temperature, humidity, atmospheric pressure, reactive gaseous air pollutant (CO, NOx, O$_3$, SO$_2$), particulate matter (PM), greenhouse gases (CO$_2$, CH$_4$), percipitation, solar radiation, wind speed and direction, anthropogenic heat, noise, sky-view factor, heat fluxes and many more.
 Correlations between these features can vary greatly based on surrounding factors. In order to better understand these correlations, many empirical studies have studied the influence of meteological factors on features such as PM~\cite{tai2010correlations}. Additionally, many fields of statistics have specialised on topics such as statistics in climatology~\cite{von2002statistical}, geostatistics~\cite{trangmar1986application} and more.\\
 All sensor readings that are taken by physical sensors are singular data points. Additionally to the type of measurement taken and the actual value observed, physical sensor readings include the physical location of the sensor, e.g.\ latitude, longitude and sometimes altitude, the type of sensor used to take the measurement, and sampling rates. For air temperature, the sampling rate could be an average temperature measured over five minutes, whereas percipitation might be measured by collecting rain for certain periods of time and then measuring the amount of rain collected. The sensor type is important, as different types of sensors can produce different qualities of measurements, e.g.\ LCS have lower accuracy compared to callibrated reference-grade high cost sensors and might have lower response rates, and perform better or worse based on the meteological conditions, e.g.\ worse performance at low temperatures, high humidity etc. Due to the placement directly inside the environment, (near) real-time observation and high temporal resolution are generelly possible, but might be influenced by factors such as network availability. The spatial resolution highly depends on the number of sensors deployed and the correct placement of the sensors. The correct placement has a direct influence on the footprint of the sensor~\cite{leclerc2014footprints} and the representativness of the measurement taken for the underlying and surrounding area~\cite{oke2006guideline}.\\
 One downside of the placement directly in the environment the sensors are observing, is the exposure to environmental influences such as heat, humidity, or pollution, that can decrease the lifetime of a sensor and may require more frequent maintenance or replacement. On example could be that due to pollution in the air, a rain gauge might be cleaned/replaced more often as over time dirt builds up very quickly.
@@ -128,8 +125,8 @@ Point interpolation methods can either be exact, meaning that the original data 
 \subsection{Exact Point Interpolation}
 
 Exact point interpolation methods have the benefit that the original data points are preserved. Fitting the original data points to a polynomial is the simplest form of interpolation, however it has the mayor drawback that there are no additional constraints for points that are not part of the original data set, potentially resulting in highly unreasonable estimations.\\
-The main idea of weighting methods is the idea to assign more weight to data points that are closer than points that are further away. Due to it's simplicity and fast computation, inverse-distance weighting (IDW) is a popular and commonly used interpolation method. The main downside with IWD is that it is a smoothing technique, therefore it is not able to capture local maximas and minimas, which could be critical for UHI detection. Splines~\cite{mitavs1988general}, another exact smoothing technique, is a mathematical method that fits either a smooth curve or surface to a set of given points. It offers several advantages such as smoothness and retention of small-scale features, however this method can be computationally expensive and might not be best suited for highly irregular data points, e.g.\ big differences between data points located very close to each other. Finite Difference is a method to caluclate a surface based on a set of differential equations, which can calculate a smooth surface from the given points, however at the cost of higher computational cost to solve the differential equations itteratively.\\
-Kriging, a geostatistical interpolation method, originally developed by Krige~\cite{krige1976review} as a moving averaging technique to reduce global biases, has developed into one of the most prominent spatial interpolation methods and has seen many contributions and improvements since the introduction of Ordinary and Universal Kriging~\cite{li2014spatial}.
+The main idea of weighting methods is the idea to assign more weight to data points that are closer than points that are further away. Due to it's simplicity and fast computation, inverse-distance weighting (IDW)~\cite{willmott1985small} is a popular and commonly used interpolation method. The main downside with IWD is that it is a smoothing technique, therefore it is not able to capture local maximas and minimas, which could be critical for UHI detection. Splines~\cite{mitavs1988general}, another exact smoothing technique, is a mathematical method that fits either a smooth curve or surface to a set of given points. It offers several advantages such as smoothness and retention of small-scale features, however this method can be computationally expensive and might not be best suited for highly irregular data points, e.g.\ big differences between data points located very close to each other. Finite Difference is a method to caluclate a surface based on a set of differential equations, which can calculate a smooth surface from the given points, however at the cost of higher computational cost to solve the differential equations itteratively.\\
+Kriging, a geostatistical interpolation method, originally developed by Krige~\cite{krige1976review} as a moving averaging technique to reduce global biases, has developed into one of the most prominent spatial interpolation methods and has seen many contributions and improvements since the introduction of Ordinary Kriging (OK) and Universal Kriging~\cite{li2014spatial}.
 
 \subsubsection{Kriging}
 
