--- a/references.bib
+++ b/references.bib
@@ -742,6 +742,17 @@
   publisher={Taylor \& Francis}
 }
 
+@article{strobl2007bias,
+  title={Bias in random forest variable importance measures: Illustrations, sources and a solution},
+  author={Strobl, Carolin and Boulesteix, Anne-Laure and Zeileis, Achim and Hothorn, Torsten},
+  journal={BMC bioinformatics},
+  volume={8},
+  number={1},
+  pages={1--21},
+  year={2007},
+  publisher={BioMed Central}
+}
+
 @article{lecun2015deep,
   title={Deep learning},
   author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
@@ -982,6 +993,26 @@ Prospects: The 2018 Revision (ST/ESA/SER.A/420). New York: United Nations
   author={Steffensen, Johan Frederik},
   year={1927},
   publisher={Williams \& Wilkins}
+}
+
+@article{chorley1965trend,
+  title={Trend-surface mapping in geographical research},
+  author={Chorley, Richard John and Haggett, Peter},
+  journal={Transactions of the Institute of British Geographers},
+  pages={47--67},
+  year={1965},
+  publisher={JSTOR}
+}
+
+@article{willmott1985small,
+  title={Small-scale climate maps: A sensitivity analysis of some common assumptions associated with grid-point interpolation and contouring},
+  author={Willmott, Cort J and Rowe, Clinton M and Philpot, William D},
+  journal={The American Cartographer},
+  volume={12},
+  number={1},
+  pages={5--16},
+  year={1985},
+  publisher={Taylor \& Francis}
 }
 
 % Datasets
